fixes padding on mobile

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -52,6 +52,7 @@
     padding: 2em 1em 1em 1em;
   }
   #about {
-    height: auto;
+    padding-top: 2em;
+    padding-bottom: 2em;
   }
 }
